--- a/filebeat/docs/modules_list.asciidoc
+++ b/filebeat/docs/modules_list.asciidoc
@@ -9,6 +9,7 @@ This file is generated! See scripts/docs_collector.py
   * <<filebeat-module-aws>>
   * <<filebeat-module-azure>>
   * <<filebeat-module-barracuda>>
+  * <<filebeat-module-bizswitch>>
   * <<filebeat-module-bluecoat>>
   * <<filebeat-module-cef>>
   * <<filebeat-module-checkpoint>>
@@ -75,6 +76,7 @@ include::modules/auditd.asciidoc[]
 include::modules/aws.asciidoc[]
 include::modules/azure.asciidoc[]
 include::modules/barracuda.asciidoc[]
+include::modules/bizswitch.asciidoc[]
 include::modules/bluecoat.asciidoc[]
 include::modules/cef.asciidoc[]
 include::modules/checkpoint.asciidoc[]
